--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="766. toeplitz-matrix.cpp" />
-    <ClCompile Include="767. reorganize-string.cpp" />
-    <ClCompile Include="769. max-chunks-to-make-sorted.cpp" />
-    <ClCompile Include="768. max-chunks-to-make-sorted-ii.cpp" />
+    <ClCompile Include="762. prime-number-of-set-bits-in-binary-representation.cpp" />
+    <ClCompile Include="763. partition-labels.cpp" />
+    <ClCompile Include="764. largest-plus-sign.cpp" />
+    <ClCompile Include="765. couples-holding-hands.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
