--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,16 +65,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="766. toeplitz-matrix.cpp">
+    <ClCompile Include="762. prime-number-of-set-bits-in-binary-representation.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="767. reorganize-string.cpp">
+    <ClCompile Include="763. partition-labels.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="769. max-chunks-to-make-sorted.cpp">
+    <ClCompile Include="764. largest-plus-sign.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="768. max-chunks-to-make-sorted-ii.cpp">
+    <ClCompile Include="765. couples-holding-hands.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
