--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,7 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="943. find-the-shortest-superstring.cpp" />
+    <ClCompile Include="1154. ordinal-number-of-date.cpp" />
+    <ClCompile Include="1155. number-of-dice-rolls-with-target-sum.cpp" />
+    <ClCompile Include="1156. swap-for-maximum-repeated-substring.cpp" />
+    <ClCompile Include="1157. online-majority-element-in-subarray.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
