--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,10 +65,28 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="927. three-equal-parts.cpp">
+    <ClCompile Include="754. reach-a-number.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="913. cat-and-mouse.cpp">
+    <ClCompile Include="771. jewels-and-stones.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="334. increasing-triplet-subsequence.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="430. flatten-a-multilevel-doubly-linked-list.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="433. minimum-genetic-mutation.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="435. non-overlapping-intervals.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="436. find-right-interval.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="442. find-all-duplicates-in-an-array.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
