--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,28 +65,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="754. reach-a-number.cpp">
+    <ClCompile Include="341. flatten-nested-list-iterator.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="771. jewels-and-stones.cpp">
+    <ClCompile Include="413. arithmetic-slices.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="334. increasing-triplet-subsequence.cpp">
+    <ClCompile Include="445. add-two-numbers-ii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="430. flatten-a-multilevel-doubly-linked-list.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="433. minimum-genetic-mutation.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="435. non-overlapping-intervals.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="436. find-right-interval.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="442. find-all-duplicates-in-an-array.cpp">
+    <ClCompile Include="449. serialize-and-deserialize-bst.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
