--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,7 +65,40 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="770. basic-calculator-iv.cpp">
+    <ClCompile Include="438. find-all-anagrams-in-a-string.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="441. arranging-coins.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="443. string-compression.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="447. number-of-boomerangs.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="448. find-all-numbers-disappeared-in-an-array.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="453. minimum-moves-to-equal-array-elements.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="455. assign-cookies.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="459. repeated-substring-pattern.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="461. hamming-distance.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="463. island-perimeter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="475. heaters.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="476. number-complement.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
