--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,11 +163,19 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="450. delete-node-in-a-bst.cpp" />
-    <ClCompile Include="451. sort-characters-by-frequency.cpp" />
-    <ClCompile Include="452. minimum-number-of-arrows-to-burst-balloons.cpp" />
-    <ClCompile Include="454. 4sum-ii.cpp" />
-    <ClCompile Include="456. 132-pattern.cpp" />
+    <ClCompile Include="482. license-key-formatting.cpp" />
+    <ClCompile Include="485. max-consecutive-ones.cpp" />
+    <ClCompile Include="492. construct-the-rectangle.cpp" />
+    <ClCompile Include="496. next-greater-element-i.cpp" />
+    <ClCompile Include="500. keyboard-row.cpp" />
+    <ClCompile Include="501. find-mode-in-binary-search-tree.cpp" />
+    <ClCompile Include="504. base-7.cpp" />
+    <ClCompile Include="506. relative-ranks.cpp" />
+    <ClCompile Include="507. perfect-number.cpp" />
+    <ClCompile Include="509. fibonacci-number.cpp" />
+    <ClCompile Include="520. detect-capital.cpp" />
+    <ClCompile Include="521. longest-uncommon-subsequence-i.cpp" />
+    <ClCompile Include="530. minimum-absolute-difference-in-bst.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
