--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,43 +65,25 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="485. max-consecutive-ones.cpp">
+    <ClCompile Include="532. k-diff-pairs-in-an-array.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="482. license-key-formatting.cpp">
+    <ClCompile Include="538. convert-bst-to-greater-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="492. construct-the-rectangle.cpp">
+    <ClCompile Include="541. reverse-string-ii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="496. next-greater-element-i.cpp">
+    <ClCompile Include="543. diameter-of-binary-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="500. keyboard-row.cpp">
+    <ClCompile Include="551. student-attendance-record-i.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="501. find-mode-in-binary-search-tree.cpp">
+    <ClCompile Include="557. reverse-words-in-a-string-iii.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="504. base-7.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="506. relative-ranks.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="507. perfect-number.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="509. fibonacci-number.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="520. detect-capital.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="521. longest-uncommon-subsequence-i.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="530. minimum-absolute-difference-in-bst.cpp">
+    <ClCompile Include="558. quad-tree-intersection.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
