--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,25 +65,19 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="532. k-diff-pairs-in-an-array.cpp">
+    <ClCompile Include="559. maximum-depth-of-n-ary-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="538. convert-bst-to-greater-tree.cpp">
+    <ClCompile Include="561. array-partition-i.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="541. reverse-string-ii.cpp">
+    <ClCompile Include="563. binary-tree-tilt.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="543. diameter-of-binary-tree.cpp">
+    <ClCompile Include="566. reshape-the-matrix.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="551. student-attendance-record-i.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="557. reverse-words-in-a-string-iii.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="558. quad-tree-intersection.cpp">
+    <ClCompile Include="572. subtree-of-another-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
