--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,19 +65,40 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="559. maximum-depth-of-n-ary-tree.cpp">
+    <ClCompile Include="575. distribute-candies.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="561. array-partition-i.cpp">
+    <ClCompile Include="581. shortest-unsorted-continuous-subarray.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="563. binary-tree-tilt.cpp">
+    <ClCompile Include="589. n-ary-tree-preorder-traversal.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="566. reshape-the-matrix.cpp">
+    <ClCompile Include="590. n-ary-tree-postorder-traversal.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="572. subtree-of-another-tree.cpp">
+    <ClCompile Include="594. longest-harmonious-subsequence.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="598. range-addition-ii.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="599. minimum-index-sum-of-two-lists.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="605. can-place-flowers.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="606. construct-string-from-binary-tree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="617. merge-two-binary-trees.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="628. maximum-product-of-three-numbers.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="633. sum-of-square-numbers.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
