--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -65,10 +65,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="467. unique-substrings-in-wraparound-string.cpp">
+    <ClCompile Include="5053. as-far-from-land-as-possible.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="468. validate-ip-address.cpp">
+    <ClCompile Include="5069. last-substring-in-lexicographical-order.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5048. find-words-that-can-be-formed-by-characters.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5052. maximum-level-sum-of-a-binary-tree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
