--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,13 +163,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="669. trim-a-binary-search-tree.cpp" />
-    <ClCompile Include="671. second-minimum-node-in-a-binary-tree.cpp" />
-    <ClCompile Include="674. longest-continuous-increasing-subsequence.cpp" />
-    <ClCompile Include="680. valid-palindrome-ii.cpp" />
-    <ClCompile Include="682. baseball-game.cpp" />
-    <ClCompile Include="686. repeated-string-match.cpp" />
-    <ClCompile Include="687. longest-univalue-path.cpp" />
+    <ClCompile Include="690. employee-importance.cpp" />
+    <ClCompile Include="693. binary-number-with-alternating-bits.cpp" />
+    <ClCompile Include="696. count-binary-substrings.cpp" />
+    <ClCompile Include="697. degree-of-an-array.cpp" />
+    <ClCompile Include="700. search-in-a-binary-search-tree.cpp" />
+    <ClCompile Include="703. kth-largest-element-in-a-stream.cpp" />
+    <ClCompile Include="704. binary-search.cpp" />
+    <ClCompile Include="705. design-hashset.cpp" />
+    <ClCompile Include="706. design-hashmap.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
