--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -44,31 +44,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="690. employee-importance.cpp">
+    <ClCompile Include="707. design-linked-list.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="693. binary-number-with-alternating-bits.cpp">
+    <ClCompile Include="709. to-lower-case.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="696. count-binary-substrings.cpp">
+    <ClCompile Include="717. 1-bit-and-2-bit-characters.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="697. degree-of-an-array.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="700. search-in-a-binary-search-tree.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="703. kth-largest-element-in-a-stream.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="704. binary-search.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="705. design-hashset.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="706. design-hashmap.cpp">
+    <ClCompile Include="720. longest-word-in-dictionary.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
