--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -44,19 +44,10 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="724. find-pivot-index.cpp">
+    <ClCompile Include="470. implement-rand10-using-rand7.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="728. self-dividing-numbers.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="733. flood-fill.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="744. find-smallest-letter-greater-than-target.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="747. largest-number-at-least-twice-of-others.cpp">
+    <ClCompile Include="474. ones-and-zeroes.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
