--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,8 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="470. implement-rand10-using-rand7.cpp" />
-    <ClCompile Include="474. ones-and-zeroes.cpp" />
+    <ClCompile Include="477. total-hamming-distance.cpp" />
+    <ClCompile Include="478. generate-random-point-in-a-circle.cpp" />
+    <ClCompile Include="481. magical-string.cpp" />
+    <ClCompile Include="486. predict-the-winner.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
