--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,7 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1157. online-majority-element-in-subarray.cpp" />
+    <ClCompile Include="5059. single-row-keyboard.cpp" />
+    <ClCompile Include="5061. design-file-system.cpp" />
+    <ClCompile Include="5062. minimum-cost-to-connect-sticks.cpp" />
+    <ClCompile Include="5074. optimize-water-distribution-in-a-village.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
